Fixed alignment / added textbox

--- a/scss/pages/_bid-campaign.scss
+++ b/scss/pages/_bid-campaign.scss
@@ -258,6 +258,7 @@
     }
   
     &__add {
+      height: 125px;
   
       button {
         width: 250px;
